# NiuNotes

./: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  .svgrrc  README.md  app.json  babel.config.js  colors.ts  index.js  metro.config.js  package-lock.json  package.json  pubspec.yaml  tailwind.colors.js  tailwind.config.js  tsconfig.build.json  tsconfig.json  typings.d.ts
android/: .project  build.gradle  settings.gradle
android/app/: .project  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
backend/: Cargo.toml  build.rs  build_backend_for_android.sh  uniffi.toml
backend/src/: audio.rs  frequency.rs  lib.rs  music.rs  notix_backend.udl  record.rs
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/notix/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/notix.xcodeproj/: project.pbxproj
ios/notixTests/: notixTests.m
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
src-frontend/: App.tsx  useGoto.ts
src-frontend/constants/: Colors.ts  Music.ts  Routes.ts  Workout.ts  index.ts  tailwind.colors.js
src-frontend/hooks/: index.ts  useGoto.ts
src-frontend/screens/: HomeScreen.tsx  SelectRootNoteScreen.tsx  SelectScaleScreen.tsx  WorkoutScreen.tsx  index.ts
src-frontend/stores/: NotixStore.ts  index.ts
src-frontend/types/: index.ts
src-frontend/utils/: index.ts  scales.ts
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
