[package]
name = "notix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "notix_backend"


[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uniffi = { version = "0.24.3", features=["cli"] }
ts-rs = "7.0.0"
lazy_static = "1.4.0"
log = "0.4"
android_logger = "0.13.1"
anyhow = "1.0.75"
oboe = { version = "0.4", features = ["java-interface"] }
atomic_float = "0.1"
rustfft = "6.1.0"

[build-dependencies]
uniffi = { version = "0.24.3" }
uniffi_build = { version = "0.24.3", features = ["builtin-bindgen"] }


[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
